<resources>
    <string name="app_name">FoodWasteApp</string>
    <string name="title_list">Shopping List</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="addItem_button_text">Add Item</string>
    <string name="NFC_scan_txt">Scan NFC Tag</string>
    <string name="text_1">Add to:</string>
    <string name="fridge_txt">Fridge</string>
    <string name="freezer_txt">Freezer</string>
    <string name="pantry_txt">Pantry</string>
    <string name="text_2">Quantity:</string>
    <string name="text_3">2</string>
    <string name="text_4">Expiry Date:</string>
    <string name="date_text">22/01/2005</string>
    <string name="save_button">Save</string>
    <string name="SpoonacularAPI">f651a42d05e54da0902e5ca0e5ccedf7</string>
    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
</resources>