<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/add_item_to_list_icon"
        android:title="Home Items" />

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/tracker_icon"
        android:title="Tracker" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/recipe_icon_home"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/profile_icon_home"
        android:title="@string/title_profile" />

</menu>