<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/AddItemFragment"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.cardview.widget.CardView
            android:id="@+id/back_button_add"
            android:layout_width="50dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/close_button_green" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Product's Details:"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10pt"
        android:background="#2F5233" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5pt"
        android:text="Enter Product's Name:"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="10pt"
        android:layout_width="300dp"
        android:layout_height="50dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10pt"
        android:background="#2F5233" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5pt"
            android:text="Storing the item in:"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fridgeB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5pt"
                android:backgroundTint="@color/primary"
                android:layout_weight="1"
                android:text="@string/fridge_txt" />

            <Button
                android:id="@+id/freezerB"
                android:backgroundTint="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5pt"
                android:layout_weight="1"
                android:text="@string/freezer_txt" />

            <Button
                android:id="@+id/pantryB"
                android:backgroundTint="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pantry_txt" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10pt"
            android:layout_marginTop="10pt"
            android:background="#2F5233" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8pt"
            android:text="@string/text_2"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantityT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"

                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10pt"
            android:layout_marginTop="10pt"
            android:background="#2F5233" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10pt"
            android:text="@string/text_4"
            android:textAlignment="center" />

    <Button
        android:id="@+id/dateT"
        style="?android:spinnerStyle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:onClick="openDatePicker"
        android:text="01 JAN 2024"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10pt"
        android:background="#2F5233" />

    <Button
            android:id="@+id/saveB"
        android:backgroundTint="@color/primary"
        android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/save_button" />

</LinearLayout>